{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 21,
  "lineage": "1339163b-9644-370b-726e-7d22d5329377",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:597088021675:loadbalancer/app/starttech-alb/fc9ca96fb4afccfe",
            "arn_suffix": "app/starttech-alb/fc9ca96fb4afccfe",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "starttech-alb-301593755.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:597088021675:loadbalancer/app/starttech-alb/fc9ca96fb4afccfe",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "starttech-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0cbdf1721983353cf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0694f6cfb79bffe31"
              },
              {
                "subnet_id": "subnet-0a9df425e29cdd7ab"
              }
            ],
            "subnets": [
              "subnet-0694f6cfb79bffe31",
              "subnet-0a9df425e29cdd7ab"
            ],
            "vpc_id": "vpc-04b77274e45d2257d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_subnet.public_b",
            "module.networking.aws_vpc.this",
            "module.security.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:597088021675:listener/app/starttech-alb/fc9ca96fb4afccfe/2b1cec9750699842",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:597088021675:targetgroup/starttech-tg/a07d2d901da65856",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:597088021675:listener/app/starttech-alb/fc9ca96fb4afccfe/2b1cec9750699842",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:597088021675:loadbalancer/app/starttech-alb/fc9ca96fb4afccfe",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_lb.alb",
            "module.compute.aws_lb_target_group.tg",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_subnet.public_b",
            "module.networking.aws_vpc.this",
            "module.security.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:597088021675:targetgroup/starttech-tg/a07d2d901da65856",
            "arn_suffix": "targetgroup/starttech-tg/a07d2d901da65856",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:597088021675:targetgroup/starttech-tg/a07d2d901da65856",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:597088021675:loadbalancer/app/starttech-alb/fc9ca96fb4afccfe"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "starttech-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04b77274e45d2257d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597088021675:internet-gateway/igw-0be70825e5ba12aa1",
            "id": "igw-0be70825e5ba12aa1",
            "owner_id": "597088021675",
            "tags": {
              "Name": "starttech-igw"
            },
            "tags_all": {
              "Name": "starttech-igw"
            },
            "vpc_id": "vpc-04b77274e45d2257d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597088021675:route-table/rtb-0982f831389463b2a",
            "id": "rtb-0982f831389463b2a",
            "owner_id": "597088021675",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0be70825e5ba12aa1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "starttech-public-rt"
            },
            "tags_all": {
              "Name": "starttech-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b77274e45d2257d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08029d0731b0139de",
            "route_table_id": "rtb-0982f831389463b2a",
            "subnet_id": "subnet-0a9df425e29cdd7ab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b730297e86cf61e",
            "route_table_id": "rtb-0982f831389463b2a",
            "subnet_id": "subnet-0694f6cfb79bffe31"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_b",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597088021675:subnet/subnet-0a9df425e29cdd7ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9df425e29cdd7ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "597088021675",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "starttech-public-a"
            },
            "tags_all": {
              "Name": "starttech-public-a"
            },
            "vpc_id": "vpc-04b77274e45d2257d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597088021675:subnet/subnet-0694f6cfb79bffe31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0694f6cfb79bffe31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "597088021675",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "starttech-public-b"
            },
            "tags_all": {
              "Name": "starttech-public-b"
            },
            "vpc_id": "vpc-04b77274e45d2257d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597088021675:vpc/vpc-04b77274e45d2257d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0be444d140eb9d506",
            "default_route_table_id": "rtb-0cd849eee06727c86",
            "default_security_group_id": "sg-027294671f9b440b8",
            "dhcp_options_id": "dopt-0ab5dffc94c751712",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04b77274e45d2257d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cd849eee06727c86",
            "owner_id": "597088021675",
            "tags": {
              "Name": "starttech-vpc"
            },
            "tags_all": {
              "Name": "starttech-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597088021675:security-group/sg-0cbdf1721983353cf",
            "description": "Allow HTTP inbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cbdf1721983353cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "starttech-alb-sg",
            "name_prefix": "",
            "owner_id": "597088021675",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04b77274e45d2257d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597088021675:security-group/sg-0452b8a66e66fac9a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0452b8a66e66fac9a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cbdf1721983353cf"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "starttech-ec2-sg",
            "name_prefix": "",
            "owner_id": "597088021675",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04b77274e45d2257d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.security.aws_security_group.alb_sg"
          ]
        }
      ]
    }
  ]
}